--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.example</groupId>
+    <groupId>org.ocean</groupId>
     <artifactId>DistributedSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Archetype - DistributedSystem</name>
     <url>http://maven.apache.org</url>
 
     <build>
@@ -32,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.ocean.server.LeaderElection</mainClass>
+                            <mainClass>Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
